# RoleAtlas

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.web  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.openai/: hosting.json
app/: DailyWorkspaces.tsx  FirstRungApp.tsx  OnboardingFlow.tsx  SignalGlyph.tsx  aiProvider.ts  candidateProfile.ts  careerOps.ts  dailyProduct.ts  globals.css  jobData.ts  jobIdentity.ts  jobs.ts  layout.tsx  liveJobs.ts  page.tsx  providerFetch.ts  signal-ui.css  sourceDisplay.ts  useDialogFocus.ts
docs/: WORKORDER_6_HANDOFF.md  ai-provider-security.md  ci.md  current-architecture.md  data-flow.md  implementation-decisions.md  product-flow-audit.md  progress.md  source-registry-contributing.md  source-support.md  ui-redesign-direction.md  workorder-5-baseline.md  (+1 more)
scripts/: doctor.mjs  (+4 more)
services/scout/: Cargo.toml  Dockerfile  default_seeds.txt
services/scout/migrations/: 0001_initial.sql  0002_normalize_countries.sql  0003_canonical_job_identity.sql  0004_source_runs_and_reconciliation.sql  0005_candidate_profiles_and_search_plans.sql  0006_search_sessions.sql  0007_global_location_eligibility.sql  0008_global_opportunity_taxonomy.sql  0009_search_source_orchestration.sql  0010_daily_workspace.sql
services/scout/src/: config.rs  eligibility.rs  extract.rs  frontier.rs  geography.rs  identity.rs  lib.rs  models.rs  opportunity.rs  orchestration.rs  registry.rs  robots.rs  search.rs
services/scout/tests/: daily_workspace.rs  reconciliation.rs  search_sessions.rs
(+41 files in other folders)
