[package]
name = "firstrung-scout"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "NATS-backed, job-specific web crawler and indexing service for RoleAtlas"

[lib]
name = "firstrung_scout"
path = "src/lib.rs"

[[bin]]
name = "scout-coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "scout-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "scout-api"
path = "src/bin/api.rs"

[dependencies]
anyhow = "1.0"
async-nats = { version = "0.46.0", features = ["jetstream"] }
axum = "0.8.9"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
regex = "1.11"
reqwest = { version = "0.13.4", default-features = false, features = ["brotli", "charset", "gzip", "http2", "json", "rustls", "stream"] }
scraper = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["chrono", "json", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v5"] }

[dev-dependencies]
pretty_assertions = "1.4"
